syntax = "proto3";
service Hello {
  rpc GetHello (GetHelloRequest) returns (GetHelloResponse) {}
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {}
}
message GetHelloRequest {
  string name = 1;
}
message GetHelloResponse {
  string greeting = 1;
}

message GetProfileRequest {
  string name = 1;
  int32  age = 2;
}
message GetProfileResponse {
  string info = 1;
}
